--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,9 @@ captures/
 .idea/libraries
 .idea/caches
 
+.idea/vcs.xml
+app/app.iml
+
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
 #*.jks
