Finish facebook shimmer.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,6 +89,8 @@
         <activity android:name=".universalmusic.ui.NowPlayingActivity" />
         <activity android:name=".universalmusic.ui.FullScreenPlayerActivity" />
 
+        <activity android:name=".shimmer.ShimmerActivity" />
+
 
     </application>
 
