--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,6 +88,8 @@
         <activity android:name=".universalmusic.ui.NowPlayingActivity" />
         <activity android:name=".universalmusic.ui.FullScreenPlayerActivity" />
 
+        <activity android:name=".customview.CustomViewActivity" />
+
 
 
         <activity android:name=".pixeldungeon.PixelDungeon" />
