--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,11 +63,10 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:28.0.0'
 
     testImplementation 'junit:junit:4.12'
 
+    //noinspection GradleCompatible
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'androidx.test:core:1.0.0'
@@ -80,9 +79,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.0.0'
 
     testImplementation "org.robolectric:robolectric:4.0.2"
-    
-    implementation 'androidx.annotation:annotation:1.0.0-alpha1'
+
+    // implementation 'androidx.core:core:1.0.0'
+    implementation 'androidx.annotation:annotation:1.0.0'
+
+
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    // implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     // ViewModel and    kapt "com.jakewharton:butterknife-compiler:8.5.1" LiveData
     implementation 'android.arch.lifecycle:extensions:1.1.1'
