--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,10 @@
         <activity android:name=".testing.espresso.CustomMatcher" />
         <activity android:name=".testing.espresso.LongListActivity" />
         <activity android:name=".testing.espresso.IdlingResourceActivity" />
+        <activity android:name=".testing.espresso.IntentsBasicActivity" />
+        <activity android:name=".testing.espresso.ContactsActivity" />
         <activity android:name=".testing.espresso.IntentsAdvancedActivity" />
+
 
         <activity
                 android:name=".todomvp.TodoMvpActivity"
