--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
     androidTestImplementation 'androidx.test.ext:junit:1.0.0'
 
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
+
     testImplementation "org.robolectric:robolectric:4.0.2"
 
     // implementation 'androidx.core:core:1.0.0'
