--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -114,6 +114,7 @@
         <activity android:name=".customview.CustomViewActivity" />
 
 
+        <activity android:name=".syncadapter.BasicSyncActivity" />
 
         <activity android:name=".pixeldungeon.PixelDungeon" />
         
