--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="com.android.home">
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" tools:ignore="ProtectedPermissions"/>
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
@@ -31,6 +36,12 @@
             android:icon="@mipmap/home"
             android:label="@string/home"
             android:theme="@style/Base.AppTheme">
+
+        <activity android:name=".alarmclock.AlarmClock"
+                  android:configChanges="orientation|keyboardHidden|keyboard|navigation"
+        />
+
+        <activity android:name=".development.DevelopmentActivity" />
         
         <activity android:name=".calculator.Calculator"
                   android:launchMode="singleTask">
