--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,10 +13,11 @@ android {
         versionCode 1
         versionName "1.0"
 
+        renderscriptTargetApi 24
+        renderscriptSupportModeEnabled true
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-
 
         externalNativeBuild {
             cmake {
