--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,13 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="com.android.home">
 
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
     <!-- 没有WRITE_SETTING -->
-    <uses-permission android:name="android.permission.WRITE_SETTINGS" tools:ignore="ProtectedPermissions"/>
-    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
-
+    <uses-permission
+            android:name="android.permission.WRITE_SETTINGS"
+            tools:ignore="ProtectedPermissions"/>
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
@@ -18,10 +19,9 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-
-    <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <!-- Required to register a SyncStatusObserver to display a "syncing..." progress indicator. -->
     <uses-permission android:name="android.permission.READ_SYNC_STATS"/>
@@ -37,138 +37,154 @@
             android:icon="@mipmap/home"
             android:label="@string/home"
             android:theme="@style/Base.AppTheme">
+        <activity android:name=".renderscript.RenderIntrinsic"/>
 
-        <activity android:name=".renderscript.RenderIntrinsic" />
+        <provider
+                android:name=".alarmclock.AlarmProvider"
+                android:authorities="com.android.home.alarmclock"/>
 
-        <provider android:name=".alarmclock.AlarmProvider" android:authorities="com.android.home.alarmclock" />
+        <activity
+                android:name=".alarmclock.AlarmClock"
+                android:configChanges="orientation|keyboardHidden|keyboard|navigation"/>
+        <activity android:name=".alarmclock.ClockPicker"/>
+        <activity android:name=".alarmclock.SetAlarm"/>
+        <activity android:name=".alarmclock.SettingsActivity"/>
 
-        <activity android:name=".alarmclock.AlarmClock"
-                  android:configChanges="orientation|keyboardHidden|keyboard|navigation" />
-        <activity android:name=".alarmclock.ClockPicker" />
-        <activity android:name=".alarmclock.SetAlarm" />
-        <activity android:name=".alarmclock.SettingsActivity" />
         <receiver android:name=".alarmclock.AlarmReceiver">
             <intent-filter>
                 <action android:name="com.android.home.alarmclock.ALARM_ALERT"/>
-                <category android:name="android.intent.category.DEFAULT" />
+
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </receiver>
-        <activity android:name=".alarmclock.AlarmAlertFullScreen" />
-        <activity android:name=".alarmclock.AlarmAlert" />
 
-        <activity android:name=".development.DevelopmentActivity" />
-
-        <activity android:name=".calculator.Calculator"
-                  android:launchMode="singleTask">
+        <activity android:name=".alarmclock.AlarmAlertFullScreen"/>
+        <activity android:name=".alarmclock.AlarmAlert"/>
+        <activity android:name=".development.DevelopmentActivity"/>
+        <activity
+                android:name=".calculator.Calculator"
+                android:launchMode="singleTask">
             <layout
                     android:minHeight="220dp"
-                    android:minWidth="230dp" />
+                    android:minWidth="230dp"/>
+
             <intent-filter>
                 <category android:name="android.intent.category.APP_CALCULATOR"/>
             </intent-filter>
         </activity>
-
-
+        <activity android:name=".development.fragments.FragmentExample"/>
         <activity
-                android:theme="@style/CalendarTheme.WithToolbar"
                 android:name=".calendar.AllInOneActivity"
-                  android:launchMode="singleTask">
-
+                android:launchMode="singleTask"
+                android:theme="@style/CalendarTheme.WithToolbar">
         </activity>
 
-        <activity-alias android:name=".calendar.CalendarApplication"
-                        android:targetActivity=".calendar.AllInOneActivity"
-                        android:exported="true"></activity-alias>
-
+        <activity-alias
+                android:name=".calendar.CalendarApplication"
+                android:exported="true"
+                android:targetActivity=".calendar.AllInOneActivity"/>
 
         <receiver android:name=".widgets.StackWidgetProvider">
             <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
             </intent-filter>
-            <meta-data android:name="android.appwidget.provider"
-                       android:resource="@xml/stackwidgetinfo" />
+
+            <meta-data
+                    android:name="android.appwidget.provider"
+                    android:resource="@xml/stackwidgetinfo"/>
         </receiver>
-        <service android:name=".widgets.StackWidgetService"
-            android:permission="android.permission.BIND_REMOTEVIEWS"
-                 android:exported="false"/>
 
+        <service
+                android:name=".widgets.StackWidgetService"
+                android:exported="false"
+                android:permission="android.permission.BIND_REMOTEVIEWS"/>
 
-        <activity android:name=".autofill.AutoFillActivity" />
-        
-        
-        <activity android:name=".syncadapter.BasicSyncActivity" />
-        <!-- This service implements our SyncAdapter. It needs to be exported, so that the system
-        sync framework can access it. -->
-        <service android:name=".syncadapter.SyncService"
-                 android:exported="true">
-            <!-- This intent filter is required. It allows the system to launch our sync service
-            as needed. -->
+        <activity android:name=".autofill.AutoFillActivity"/>
+        <activity android:name=".syncadapter.BasicSyncActivity"/>
+        <!--
+        This service implements our SyncAdapter. It needs to be exported, so that the system
+        sync framework can access it.
+        -->
+        <service
+                android:name=".syncadapter.SyncService"
+                android:exported="true">
+
+            <!--
+            This intent filter is required. It allows the system to launch our sync service
+            as needed.
+            -->
             <intent-filter>
-                <action android:name="android.content.SyncAdapter" />
+                <action android:name="android.content.SyncAdapter"/>
             </intent-filter>
             <!-- This points to a required XML file which describes our SyncAdapter. -->
-            <meta-data android:name="android.content.SyncAdapter"
-                       android:resource="@xml/syncadapter" />
+            <meta-data
+                    android:name="android.content.SyncAdapter"
+                    android:resource="@xml/syncadapter"/>
         </service>
-        <!-- ContentProvider to store feed data.
+        <!--
+        ContentProvider to store feed data.
 
         The "authorities" here are defined as part of a ContentProvider interface. It's used here
         as an attachment point for the SyncAdapter. See res/xml/syncadapter.xml and
         SyncService.java.
 
         Since this ContentProvider is not exported, it will not be accessible outside of this app's
-        package. -->
-        <provider android:authorities="com.android.home.syncadapter"
-                  android:exported="false"
-                  android:name=".syncadapter.provider.FeedProvider" />
+        package.
+        -->
+        <provider
+                android:name=".syncadapter.provider.FeedProvider"
+                android:authorities="com.android.home.syncadapter"
+                android:exported="false"/>
 
-        <!-- This implements the account we'll use as an attachment point for our SyncAdapter. Since
+        <!--
+        This implements the account we'll use as an attachment point for our SyncAdapter. Since
         our SyncAdapter doesn't need to authenticate the current user (it just fetches a public RSS
         feed), this account's implementation is largely empty.
 
         It's also possible to attach a SyncAdapter to an existing account provided by another
-        package. In that case, this element could be omitted here. -->
+        package. In that case, this element could be omitted here.
+        -->
         <service android:name=".syncadapter.GenericAccountService">
+
             <!-- Required filter used by the system to launch our account service. -->
             <intent-filter>
-                <action android:name="android.accounts.AccountAuthenticator" />
+                <action android:name="android.accounts.AccountAuthenticator"/>
             </intent-filter>
             <!-- This points to an XMLf ile which describes our account service. -->
-            <meta-data android:name="android.accounts.AccountAuthenticator"
+            <meta-data
+                    android:name="android.accounts.AccountAuthenticator"
                     android:resource="@xml/authenticator"/>
         </service>
 
-
-        <activity android:name=".Home"
-        android:launchMode="singleTop">
+        <activity
+                android:name=".Home"
+                android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.VIEW"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <activity android:name=".components.ArchComponents" />
-
-        <activity android:name=".testing.TestingActivity" />
+        <activity android:name=".components.ArchComponents"/>
+        <activity android:name=".testing.TestingActivity"/>
         <activity android:name=".testing.espresso.EspressoBasic">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.HOME" />
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.HOME"/>
             </intent-filter>
         </activity>
         <activity android:name=".testing.espresso.ShowTextActivity"/>
-        <activity android:name=".testing.espresso.CustomMatcher" />
-        <activity android:name=".testing.espresso.LongListActivity" />
-        <activity android:name=".testing.espresso.IdlingResourceActivity" />
-        <activity android:name=".testing.espresso.IntentsBasicActivity" />
-        <activity android:name=".testing.espresso.ContactsActivity" />
-        <activity android:name=".testing.espresso.IntentsAdvancedActivity" />
-        <activity android:name=".testing.espresso.RecyclerViewActivity" />
-        <activity android:name=".testing.espresso.WebViewActivity" />
-        <activity android:name=".testing.junitrunner.CalculatorActivity" />
-
-
+        <activity android:name=".testing.espresso.CustomMatcher"/>
+        <activity android:name=".testing.espresso.LongListActivity"/>
+        <activity android:name=".testing.espresso.IdlingResourceActivity"/>
+        <activity android:name=".testing.espresso.IntentsBasicActivity"/>
+        <activity android:name=".testing.espresso.ContactsActivity"/>
+        <activity android:name=".testing.espresso.IntentsAdvancedActivity"/>
+        <activity android:name=".testing.espresso.RecyclerViewActivity"/>
+        <activity android:name=".testing.espresso.WebViewActivity"/>
+        <activity android:name=".testing.junitrunner.CalculatorActivity"/>
         <activity
                 android:name=".todomvp.TodoMvpActivity"
                 android:label="@string/todomvp"/>
@@ -180,16 +196,12 @@
         <activity
                 android:name=".picasso.PicassoActivity"
                 android:label="@string/picasso"/>
-        <activity android:name=".picasso.PicassoGridViewActivity" />
-        <activity android:name=".picasso.PicassoGalleryActivity" />
-        <activity android:name=".picasso.PicassoContactsActivity" />
-        <activity android:name=".picasso.PicassoListDetailActivity" />
-
+        <activity android:name=".picasso.PicassoGridViewActivity"/>
+        <activity android:name=".picasso.PicassoGalleryActivity"/>
+        <activity android:name=".picasso.PicassoContactsActivity"/>
+        <activity android:name=".picasso.PicassoListDetailActivity"/>
         <activity android:name=".camerabasic.CameraBasic"/>
-
-
-        <activity android:name=".plaid.PlaidApp" />
-
+        <activity android:name=".plaid.PlaidApp"/>
         <activity android:name=".randommusic.RandomMusicPlayer"/>
 
         <service android:name=".randommusic.MusicService">
@@ -215,30 +227,51 @@
         <activity android:name=".shimmer.ShimmerActivity"/>
         <activity android:name=".rxjavasamples.RxJavaSamples"/>
         <activity android:name=".mpchart.MpChart"/>
+        <activity
+                android:name=".universalmusic.ui.MusicPlayerActivity"
+                android:label="Universal Music Player"/>
+        <activity android:name=".universalmusic.ui.PlaceholderActivity"/>
 
-        <activity android:name=".universalmusic.ui.MusicPlayerActivity"
-                  android:label="Universal Music Player"/>
-        <activity android:name=".universalmusic.ui.PlaceholderActivity" />
         <service android:name=".universalmusic.MusicService">
             <intent-filter>
-                <action android:name="android.media.browse.MediaBrowserService" />
+                <action android:name="android.media.browse.MediaBrowserService"/>
             </intent-filter>
         </service>
-        <activity android:name=".universalmusic.ui.NowPlayingActivity" />
-        <activity android:name=".universalmusic.ui.FullScreenPlayerActivity" />
 
-        <activity android:name=".customview.CustomViewActivity" />
-        
-        <activity android:name=".rssimage.DisplayActivity" />
-        <provider android:authorities="com.android.home.rssimage" android:name=".rssimage.DataProvider"
-        android:exported="true"/>
-        <service android:name=".rssimage.RSSPullService" />
+        <activity android:name=".universalmusic.ui.NowPlayingActivity"/>
+        <activity android:name=".universalmusic.ui.FullScreenPlayerActivity"/>
+        <activity android:name=".customview.CustomViewActivity"/>
+        <activity android:name=".rssimage.DisplayActivity"/>
 
-        <activity android:name=".stepsensor.BatchStepSensor" />
+        <provider
+                android:name=".rssimage.DataProvider"
+                android:authorities="com.android.home.rssimage"
+                android:exported="true"/>
 
-        <activity android:name=".displaybitmaps.ui.DisplayBitmaps" />
-        <activity android:name=".displaybitmaps.ui.ImageDetailActivity" />
+        <service android:name=".rssimage.RSSPullService"/>
 
+        <activity android:name=".stepsensor.BatchStepSensor"/>
+        <activity android:name=".displaybitmaps.ui.DisplayBitmaps"/>
+        <activity android:name=".displaybitmaps.ui.ImageDetailActivity"/>
+
+        <receiver android:name=".development.widget.NewAppWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+            </intent-filter>
+
+            <meta-data
+                    android:name="android.appwidget.provider"
+                    android:resource="@xml/new_app_widget_info"/>
+        </receiver>
+
+        <activity android:name=".development.sensors.SensorSurvey">
+        </activity>
+        <activity android:name=".development.sensors.TiltSpot">
+        </activity>
+        <activity android:name=".development.profilegpu.ProfileGPU">
+        </activity>
+        <activity android:name=".development.profilegpu.GPUOverdraw">
+        </activity>
     </application>
 
 </manifest>
