--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,19 +59,17 @@ android {
             includeAndroidResources = true
         }
     }
+
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
     testImplementation 'junit:junit:4.12'
-
     //noinspection GradleCompatible
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test:rules:1.1.0'
     androidTestImplementation 'androidx.test:core:1.0.0'
-
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
@@ -79,18 +77,12 @@ dependencies {
     implementation 'androidx.test.espresso:espresso-idling-resource:3.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
     androidTestImplementation 'androidx.test.ext:junit:1.0.0'
-
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
-
-    testImplementation "org.robolectric:robolectric:4.0.2"
-
+    testImplementation 'org.robolectric:robolectric:4.0.2'
     // implementation 'androidx.core:core:1.0.0'
     implementation 'androidx.annotation:annotation:1.0.0'
-
-
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     // implementation 'androidx.recyclerview:recyclerview:1.0.0'
-
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
     // ViewModel and    kapt "com.jakewharton:butterknife-compiler:8.5.1" LiveData
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
@@ -101,44 +93,36 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:2.1.0-alpha02"
     implementation 'com.google.android.material:material:1.1.0-alpha01'
     implementation 'androidx.appcompat:appcompat:1.0.2'
-
     // implementation 'com.google.guava:guava:18.0'
     implementation 'com.google.guava:guava:26.0-jre'
     // or, for Android:
     api 'com.google.guava:guava:26.0-android'
-
-
-    implementation "androidx.test.espresso:espresso-idling-resource:3.1.0"
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
-    implementation "io.reactivex.rxjava2:rxjava:2.2.3"
-
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
     implementation 'com.jakewharton.timber:timber:4.5.1'
-    implementation "com.jakewharton:butterknife:9.0.0-rc1"
+    implementation 'com.jakewharton:butterknife:9.0.0-rc1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc1'
-
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
-
     implementation 'org.rajawali3d:rajawali:1.0.325@aar'
-
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
-    implementation "com.github.akarnokd:rxjava2-extensions:0.16.0"
+    implementation 'com.github.akarnokd:rxjava2-extensions:0.16.0'
     implementation 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
-
     implementation 'com.google.android.exoplayer:exoplayer:2.8.4'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-
     implementation 'org.apache.httpcomponents:httpclient:4.5.6'
-
     // 迁移导入相关的androidx库
     // https://developer.android.google.cn/jetpack/androidx/migrate
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'androidx.interpolator:interpolator:1.0.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation files('libs/BaiduLBS_Android.jar')
 }
